k8s/sam/00_zeroclaw_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zeroclaw-test
  labels:
    istio.io/dataplane-mode: ambient
